# BagattoEngine

./: .gitignore  BitBoards.hpp  Board.cpp  Board.hpp  CMakeLists.txt  CMakePresets.json  Debugger.cpp  Debugger.hpp  Engine.cpp  Engine.hpp  HashTable.cpp  HashTable.hpp  LookupTables.cpp  LookupTables.hpp  MagicBitboards.cpp  MagicBitboards.hpp  Move.cpp  Move.hpp  MoveGenerator.cpp  MoveGenerator.hpp  TT.cpp  TT.hpp  TTValue.hpp  UCI.cpp  UCI.hpp  Zobrist.cpp  Zobrist.hpp  evaluation.cpp  evaluation.hpp  main.cpp  notation.hpp  utils.cpp  utils.hpp
valgrind/: callgrind.out.9603  profile.txt
